--- a/index.html
+++ b/index.html
@@ -15,19 +15,26 @@
     <section id="etch-a-sketch">
       <div class="container">
         <!-- div squares added here -->
-        
       </div>
-      <div class="knob knob-left">
-
+      <div id="lightenKnob" class="knob knob-left">
+        <span class="leftText">Light</span>
+        <span class="rightText">Dark</span>
+        <div class="mark face-right"></div>
       </div>
-      <div class="knob knob-right">
-
+      <div id="colorKnob" class="knob knob-right">
+        <span class="leftText">Color</span>
+        <span class="rightText">Black</span>
+        <div class="mark face-left"></div>
       </div>
     </section>
     <section id="info">
-      <p>Current Grid size:</p>
-      <p id="size">16 x 16</p>
-      <button type="button" name="button">Resize</button>
+      <h2>Current Grid Size: <span id="size">16 x 16</span></h2>
+      <div>
+        <label for="colorPercentage">Color Percentage</label>
+        <input id="colorPercentage" type="range" name="colorPercentage" value="0.1" min="0" max="1" step="0.1" list="tickmarks"/>
+      </div>
+      <button id="resize" type="button" name="button">Resize</button>
+      <button id="clear" type="button" name="button">Clear</button>
     </section>
   </main>
   </body>
