--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+  Created By: Levi Butcher
+  Project Idea from Odin Project
+-->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
